--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <a class="nav-link" href="products.html">Our Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.htmlLogin</a>
+                <a class="nav-link" href="about.html">About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
