--- a/Login/index.html
+++ b/Login/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
     <h2>Registration</h2>
-    <form action="#">
+    <form action="../index.html">
       <div class="input-box">
         <input type="text" placeholder="Enter your name" required>
       </div>
