--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/blackforest.png" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Black Forest</h4></a>
                 <h6>Rp. 25.000,00</h6>
