--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <a href="#"><h4>Black Forest</h4></a>
                 <h6>Rp. 25.000,00</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <p>Varian ini memadukan rasa cokelat yang kaya dengan krim lembut dan sentuhan ceri segar di antaranya.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -125,11 +125,11 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/redvelvet.png" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$30.25</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4>Red Velvet</h4></a>
+                <h6>Rp. 25.000,00</h6>
+                <p>Lapisan mille crepes berwarna merah lembut dengan rasa red velvet yang khas, elegan, lembut dan memanjakan lidah.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
