--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/lotus.png" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$20.45</h6>
-                <p>Sixteen Clothing is free CSS template provided by TemplateMo.</p>
+                <a href="#"><h4>Lotus Crunch</h4></a>
+                <h6>Rp. 25.000,00</h6>
+                <p>Setiap lapisan menyimpan rasa khas biskuit Lotus Biscoff—manis dengan sentuhan karamel yang kaya. </p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -161,11 +161,11 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_04.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/tiramisu.png" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$15.25</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <h6>Rp. 25.000,00</h6>
+                <p>Mille crepes tiramisu ini cocok untuk Anda yang menyukai rasa manis dengan sentuhan pahit yang elegan.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
