--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Spesial Mille</h2>
+              <h2>Menu SieMille</h2>
               <a href="products.html">Lihat semua mille <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
@@ -181,9 +181,9 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_05.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$12.50</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="#"><h4>Strawberry</h4></a>
+                <h6>Rp. 25.000,00</h6>
+                <p>Mille crepes ini menghadirkan kombinasi krim lembut dengan rasa stroberi yang segar dan alami.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <a href="#"><h4>Tittle goes here</h4></a>
                 <h6>$22.50</h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <p>mille crepes ini memiliki rasa yang khas dan rasa pahit lembut yang menenangkan dan memberikan rasa yang sederhana namun berkelas. </p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
