--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_05.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/stroberi.png" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Strawberry</h4></a>
                 <h6>Rp. 25.000,00</h6>
@@ -197,10 +197,10 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/product_06.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/product_6.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$22.50</h6>
+                <a href="#"><h4>Matcha</h4></a>
+                <h6>Rp. 25.000,00</h6>
                 <p>mille crepes ini memiliki rasa yang khas dan rasa pahit lembut yang menenangkan dan memberikan rasa yang sederhana namun berkelas. </p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
