--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/blackforest.png" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Black Forest</h4></a>
+                <a href="#"><h4>Dark Cherry Layers</h4></a>
                 <h6>Rp. 25.000,00</h6>
                 <p>Varian ini memadukan rasa cokelat yang kaya dengan krim lembut dan sentuhan ceri segar di antaranya.</p>
                 <ul class="stars">
@@ -125,7 +125,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/redvelvet.png" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Red Velvet</h4></a>
+                <a href="#"><h4>Velvet Crush</h4></a>
                 <h6>Rp. 25.000,00</h6>
                 <p>Lapisan mille crepes berwarna merah lembut dengan rasa red velvet yang khas, elegan, lembut dan memanjakan lidah.</p>
                 <ul class="stars">
@@ -161,7 +161,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/tiramisu.png" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
+                <a href="#"><h4>Mocha Whisper</h4></a>
                 <h6>Rp. 25.000,00</h6>
                 <p>Mille crepes tiramisu ini cocok untuk Anda yang menyukai rasa manis dengan sentuhan pahit yang elegan.</p>
                 <ul class="stars">
@@ -179,7 +179,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/stroberi.png" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Strawberry</h4></a>
+                <a href="#"><h4>Berry Bloom</h4></a>
                 <h6>Rp. 25.000,00</h6>
                 <p>Mille crepes ini menghadirkan kombinasi krim lembut dengan rasa stroberi yang segar dan alami.</p>
                 <ul class="stars">
@@ -197,7 +197,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/images/product_6.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Matcha</h4></a>
+                <a href="#"><h4>Green Harmony</h4></a>
                 <h6>Rp. 25.000,00</h6>
                 <p>mille crepes ini memiliki rasa yang khas dan rasa pahit lembut yang menenangkan dan memberikan rasa yang sederhana namun berkelas. </p>
                 <ul class="stars">
@@ -253,11 +253,6 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="inner-content">
               <div class="row">
                 <div class="col-md-8">
-                  <h4>Creative &amp; Unique <em>Sixteen</em> Products</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque corporis amet elite author nulla.</p>
-                </div>
-                <div class="col-md-4">
-                  <a href="#" class="filled-button">Purchase Now</a>
                 </div>
               </div>
             </div>
