--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="index.html">Beranda
                   <span class="sr-only">(current)</span>
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Mille kami</a>
+                <a class="nav-link" href="products.html">Produk</a>
               </li>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontak kami</a>
+                <a class="nav-link" href="contact.html">Tentang</a>
               </li>
             </ul>
           </div>
