--- a/Login/index.html
+++ b/Login/index.html
@@ -4,21 +4,21 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Registration or Sign Up form in HTML CSS | CodingLab </title>
+    <title> Login SieMille </title>
     <link rel="stylesheet" href="style.css">
    </head>
 <body>
   <div class="wrapper">
-    <h2>Registration</h2>
+    <h2>Login</h2>
     <form action="../index.html">
       <div class="input-box">
-        <input type="text" placeholder="Enter your name" required>
+        <input type="text" placeholder="Nama" required>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Enter your email" required>
+        <input type="text" placeholder="Email" required>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Create password" required>
+        <input type="password" placeholder="Buat password" required>
       </div>
       <div class="input-box">
         <input type="password" placeholder="Confirm password" required>
@@ -28,10 +28,10 @@
         <h3>I accept all terms & condition</h3>
       </div>
       <div class="input-box button">
-        <input type="Submit" value="Register Now">
+        <input type="Submit" value="Login">
       </div>
       <div class="text">
-        <h3>Already have an account? <a href="#">Login now</a></h3>
+        <h3>Sudah punya akun? <a href="#">Login now</a></h3>
       </div>
     </form>
   </div>
