--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="Login/index.html"><h2>Login</h2></a>
+          <a class="navbar-brand" href="index.html"><h2>SieMille</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,7 +56,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Produk</a>
+                <a class="nav-link" href="Login/products.html">Produk</a>
               </li>
               </li>
               <li class="nav-item">
@@ -80,12 +80,6 @@ https://templatemo.com/tm-546-sixteen-clothing
         </div>
         <div class="banner-item-02">
           <div class="text-content">
-            <h4>Diskon</h4>
-            <h2>Setiap bulan</h2>
-          </div>
-        </div>
-        <div class="banner-item-03">
-          <div class="text-content">
             <h4>Rasa Manis</h4>
             <h2>Di setiap gigitan</h2>
           </div>
@@ -100,7 +94,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Menu SieMille</h2>
-              <a href="products.html">Lihat semua mille <i class="fa fa-angle-right"></i></a>
+              <a href="Login/products.html">Lihat semua mille <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
           <div class="col-md-4">
