--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="Login/products.html">Produk</a>
+                <a class="nav-link" href="Login/index.html">Produk</a>
               </li>
               </li>
               <li class="nav-item">
@@ -94,7 +94,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Menu SieMille</h2>
-              <a href="Login/products.html">Lihat semua mille <i class="fa fa-angle-right"></i></a>
+              <a href="Login/index.html">Lihat semua mille <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
           <div class="col-md-4">
