--- a/Login/index.html
+++ b/Login/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
     <h2>Login</h2>
-    <form action="../index.html">
+    <form action="../products.html">
       <div class="input-box">
         <input type="text" placeholder="Nama" required>
       </div>
@@ -20,8 +20,6 @@
       <div class="input-box">
         <input type="password" placeholder="Buat password" required>
       </div>
-      <div class="input-box">
-        <input type="password" placeholder="Confirm password" required>
       </div>
       <div class="policy">
         <input type="checkbox">
@@ -30,8 +28,6 @@
       <div class="input-box button">
         <input type="Submit" value="Login">
       </div>
-      <div class="text">
-        <h3>Sudah punya akun? <a href="#">Login now</a></h3>
       </div>
     </form>
   </div>
