--- a/products.html
+++ b/products.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="text-content">
-              <h2>Mille Crepes Kami</h2>
+              <h2>Menu SieMille</h2>
             </div>
           </div>
         </div>
