--- a/products.html
+++ b/products.html
@@ -88,7 +88,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-12">
             <div class="filters">
               <ul>
-                  <li class="active" data-filter="*">SieClassic</li>
+                  <li class="active" data-filter="*">SieMenu</li>
                   <li data-filter=".des">SieSpesial</li>
                   <li data-filter=".dev">Sie Best Seller</li>
               </ul>
@@ -99,9 +99,9 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="row grid">
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_01.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/lotus.png" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
+                          <a href="#"><h4>Lotus Crunch</h4></a>
                           <h6>Rp. 25.000,00</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -111,15 +111,33 @@ https://templatemo.com/tm-546-sixteen-clothing
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (62)</span>
+                          <span>Reviews (36)</span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_02.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/tiramisu.png" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
+                          <a href="#"><h4>Mocha Whisper</h4></a>
+                          <h6>Rp 25.000,00</h6>
+                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <ul class="stars">
+                            <li><i class="fa fa-star"></i></li>
+                            <li><i class="fa fa-star"></i></li>
+                            <li><i class="fa fa-star"></i></li>
+                            <li><i class="fa fa-star"></i></li>
+                            <li><i class="fa fa-star"></i></li>
+                          </ul>
+                          <span>Reviews (48)</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 all gra">
+                      <div class="product-item">
+                        <a href="#"><img src="assets/images/blackforest.png" alt=""></a>
+                        <div class="down-content">
+                          <a href="#"><h4>Dark Cherry Layers</h4></a>
                           <h6>Rp 25.000,00</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
@@ -135,10 +153,10 @@ https://templatemo.com/tm-546-sixteen-clothing
                     </div>
                     <div class="col-lg-4 col-md-4 all gra">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_03.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/redvelvet.png" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$32.50</h6>
+                          <a href="#"><h4>Velvet Crush</h4></a>
+                          <h6>Rp 25.000,00</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -147,34 +165,16 @@ https://templatemo.com/tm-546-sixteen-clothing
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (36)</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 all gra">
-                      <div class="product-item">
-                        <a href="#"><img src="assets/images/product_04.jpg" alt=""></a>
-                        <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$24.60</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
-                          <ul class="stars">
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                          </ul>
-                          <span>Reviews (48)</span>
+                          <span>Reviews (21)</span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all dev">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_05.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/stroberi.png" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$18.75</h6>
+                          <a href="#"><h4>Berry Bloom</h4></a>
+                          <h6>Rp 25.000,00</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -183,16 +183,16 @@ https://templatemo.com/tm-546-sixteen-clothing
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (60)</span>
+                          <span>Reviews (41)</span>
                         </div>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-4 all des">
                       <div class="product-item">
-                        <a href="#"><img src="assets/images/product_06.jpg" alt=""></a>
+                        <a href="#"><img src="assets/images/matcha.png" alt=""></a>
                         <div class="down-content">
-                          <a href="#"><h4>Tittle goes here</h4></a>
-                          <h6>$12.50</h6>
+                          <a href="#"><h4>Green Harmony</h4></a>
+                          <h6>Rp 25.000,00</h6>
                           <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
                           </ul>
-                          <span>Reviews (72)</span>
+                          <span>Reviews (32)</span>
                         </div>
                       </div>
                     </div>
