--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Sixteen <em>Clothing</em></h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Sie <em>Mille</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -87,27 +87,26 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Lokasi</h2>
+              <h2>Hubungi Kami</h2>
             </div>
           </div>
           <div class="col-md-8">
-<!-- How to change your own map point
-	1. Go to Google Maps
-	2. Click on your location point
-	3. Click "Share" and choose "Embed map" tab
-	4. Copy only URL and paste it within the src="" field below
 -->
-            <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="330px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="container-fluid bg-light mt-5 py-5">
+        <div class="container pt-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Hubungi Kami</h5>
+                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Jalan Merdeka 01, Yogyakarta</p>
+                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>Najla@Gmail.com</p>
+                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+62 812 2559 6515</p>
+                </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="left-content">
               <h4>Tentang</h4>
               <p>Terima kasih telah berkunjung ke SieMille! Kami berharap setiap lapisan mille crepes kami bisa jadi bagian dari hari manismu. Yuk, ikuti perjalanan rasa kami di media sosial dan jangan lupa mampir langsung ke lokasi kami!</p>
-              <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-instragram"></i></a></li>
-		<li><a href="#"><i class="fa fa-gmail"></i></a></li>      
               </ul>
             </div>
           </div>
