--- a/contact.html
+++ b/contact.html
@@ -97,15 +97,15 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-uppercase border-start border-5 border-primary ps-3 mb-4">Hubungi Kami</h5>
-                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Jalan Merdeka 01, Yogyakarta</p>
-                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>Najla@Gmail.com</p>
-                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+62 812 2559 6515</p>
+                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Jalan Kue Manis 01, Yogyakarta</p>
+                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>Siemille@gmail.com</p>
+                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>08123456789</p>
                 </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="left-content">
-              <h4>Tentang</h4>
+              <h4>Penutup</h4>
               <p>Terima kasih telah berkunjung ke SieMille! Kami berharap setiap lapisan mille crepes kami bisa jadi bagian dari hari manismu. Yuk, ikuti perjalanan rasa kami di media sosial dan jangan lupa mampir langsung ke lokasi kami!</p>
               </ul>
             </div>
