--- a/products.html
+++ b/products.html
@@ -139,7 +139,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                         <div class="down-content">
                           <a href="#"><h4>Dark Cherry Layers</h4></a>
                           <h6>Rp 25.000,00</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <p>Varian ini memadukan rasa cokelat yang kaya dengan krim lembut dan sentuhan ceri segar di antaranya.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
