--- a/products.html
+++ b/products.html
@@ -103,7 +103,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                         <div class="down-content">
                           <a href="#"><h4>Lotus Crunch</h4></a>
                           <h6>Rp. 25.000,00</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <p>Setiap lapisan menyimpan rasa khas biskuit Lotus Biscoff—manis dengan sentuhan karamel yang kaya.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -121,7 +121,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                         <div class="down-content">
                           <a href="#"><h4>Mocha Whisper</h4></a>
                           <h6>Rp 25.000,00</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <p>Mille crepes tiramisu ini cocok untuk Anda yang menyukai rasa manis dengan sentuhan pahit yang elegan.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -157,7 +157,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                         <div class="down-content">
                           <a href="#"><h4>Velvet Crush</h4></a>
                           <h6>Rp 25.000,00</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <p>Lapisan mille crepes berwarna merah lembut dengan rasa red velvet yang khas, elegan, lembut dan memanjakan lidah.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -175,7 +175,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                         <div class="down-content">
                           <a href="#"><h4>Berry Bloom</h4></a>
                           <h6>Rp 25.000,00</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <p>Mille crepes ini menghadirkan kombinasi krim lembut dengan rasa stroberi yang segar dan alami.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -193,7 +193,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                         <div class="down-content">
                           <a href="#"><h4>Green Harmony</h4></a>
                           <h6>Rp 25.000,00</h6>
-                          <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                          <p>mille crepes ini memiliki rasa yang khas dan rasa pahit lembut yang menenangkan dan memberikan rasa yang sederhana namun berkelas.</p>
                           <ul class="stars">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
